# AZC

./: LICENSE  README.md  nextstep.md
compiler/: Cargo.toml
compiler-c/: Makefile  azc  comprehensive_test  debug_parse  full_test  parser_test  simple_test  simple_test.c  simple_test2  simple_test2.c  simple_test3  simple_test3.c  simple_test4  simple_test4.c  test1  test_all  test_all.c  test_azc  test_azc.c  test_compiler  test_lexer
compiler-c/src/: ast.c  ast.h  codegen.c  codegen.h  debug_keywords  debug_keywords.c  fix_lexer  fix_lexer.c  lexer.c  lexer.h  main.c  parser.c  parser.h  test_buffer  test_buffer.c
compiler/src/: codegen.rs  lib.rs  main.rs
compiler/src/ast/: mod.rs  nodes.rs  parser.rs
compiler/src/ownership/: borrow.rs  mod.rs
compiler/src/runtime/: agent.rs  distributed.rs  hotreload.rs  mod.rs  plugin.rs  sandbox.rs
compiler/src/safety/: mod.rs
compiler/src/types/: ast.rs  async_.rs  checker.rs  env.rs  generics.rs  inference.rs  mod.rs  patterns.rs  traits.rs
docs/: AZC_AGENT_SYSTEM.md  AZC_INDEPENDENT_COMPILER.md  AZC_LANGUAGE_DESIGN.md  AZC_VS_RUST_COMPARISON.md  AZC_v0.4.0_Design.md  AZC_v0.5.0_Design.md  IMPROVEMENTS_AND_TOOLS_SUMMARY.md
editors/azc-vim/: README.md
editors/azc-vim/autoload/: azc.vim
editors/azc-vim/ftdetect/: azc.vim
editors/azc-vim/indent/: azc.vim
editors/azc-vim/plugin/: azc.vim
editors/azc-vim/syntax/: azc.vim
editors/azc-vscode/: .vscodeignore  README.md  language-configuration.json  package.json  tsconfig.json
editors/azc-vscode/src/: extension.ts
editors/azc-vscode/syntaxes/: azc.tmLanguage.json
examples/: agent_collaboration.azc  agent_delegation.azc  agent_messaging.azc  agent_system.azc  data_pipeline.azc  hello.azc  web_server.azc
playground/backend/: Cargo.toml
playground/backend/src/: main.rs
playground/frontend/: package.json
playground/frontend/public/: index.html
playground/frontend/src/: App.css  App.tsx
registry/server/: Cargo.toml
registry/server/src/: main.rs  models.rs
registry/server/src/auth/: mod.rs
registry/server/src/db/: mod.rs
registry/server/src/handlers/: mod.rs  packages.rs  users.rs
registry/server/src/storage/: mod.rs
std/: README.md  core.azc  io.azc
tests/: 01_variables.azc  02_functions.azc  03_if_else.azc  04_while_loop.azc  05_boolean.azc  06_comparison.azc  07_mutable.azc  08_structs.azc  09_enums.azc  10_async.azc  11_unsafe.azc  12_ffi.azc  README.md  compound_assign.azc  comprehensive_test.c  control_flow.azc  debug_compound.azc  debug_lexer.c  debug_parse.c  full_compile_test.c  functions.azc  run_tests.sh  simple_test.c  test_azc_c.c  variables.azc  while_loop.azc
tests/safety/: README.md  run_safety_tests.sh
tests/safety/borrow/: 01_borrow_tests.azc
tests/safety/industrial/: 01_industrial_safety.azc
tests/safety/memory/: 01_memory_safety.azc
tests/safety/ownership/: 01_move_semantics.azc  01_ownership.azc
tests/safety/types/: 01_basic_types.azc
tools/: README.md
tools/azc-fmt/: Cargo.toml
tools/azc-fmt/src/: main.rs
tools/azc-lint/: Cargo.toml
tools/azc-lint/src/: main.rs
tools/azc-lsp/: Cargo.toml
tools/azc-lsp/src/: main.rs
tools/azc-pkg/: Cargo.toml
tools/azc-pkg/src/: main.rs
tools/azc-repl/: Cargo.toml
tools/azc-repl/src/: main.rs
tools/azc-sim/: README.md
tools/azc-viz/: README.md
