[package]
name = "azc-playground"
version = "0.5.0"
edition = "2021"
authors = ["AZC Team <team@azc.dev>"]
description = "AZC Web Playground Backend"
license = "MIT"

[dependencies]
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3"