[package]
name = "azc-registry"
version = "0.5.0"
edition = "2021"
authors = ["AZC Team <team@azc.dev>"]
description = "AZC Package Registry Server"
license = "MIT"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# Storage
aws-sdk-s3 = "1"
aws-config = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
semver = { version = "1", features = ["serde"] }
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"

# Configuration
config = "0.14"
dotenv = "0.15"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }