[package]
name = "azc-fmt"
version = "0.1.0"
edition = "2021"
description = "Code formatter for AZC"
authors = ["AZC Team"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[[bin]]
name = "azc-fmt"
path = "src/main.rs"