[package]
name = "azc-lint"
version = "0.1.0"
edition = "2021"
description = "Linter for AZC"
authors = ["AZC Team"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"

[[bin]]
name = "azc-lint"
path = "src/main.rs"