[package]
name = "azc-pkg"
version = "0.1.0"
edition = "2021"
description = "Package manager for AZC programming language"
authors = ["AZC Team"]
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
semver = { version = "1.0", features = ["serde"] }
git2 = "0.18"
walkdir = "2.0"
indicatif = "0.17"
colored = "2.0"
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.0"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"

[[bin]]
name = "azc"
path = "src/main.rs"